# AlgriothmDemo

./: .gitignore  CMakeLists.txt  README.md  algorithm.sh  main.cpp
Demo/: CMakeLists.txt  demo.cpp
cpp/: CMakeLists.txt
cpp/MString/: Makefile  cmake_install.cmake
cpp/MString/Match/: string_match.cpp
cpp/include/: string_match.h
include/: demo.h
java/src/xyz/meyok/algorithm/: Demo.java
java/src/xyz/meyok/algorithm/mstring/: StringMatch.java
src/cpp/: CMakeLists.txt
src/cpp/MString/: CMakeLists.txt  demo.cpp
src/cpp/include/: demo.h  string_match.h
src/java/: StringMatch.java
